[workspace] 

members = ["event_pipeline", "flume_event_bus", "tokio_event_bus"]

resolver = "2"

[workspace.dependencies]

# 
# workspace crates
# 

tokio_event_bus = { path = "./tokio_event_bus" }
flume_event_bus = { path = "./flume_event_bus" }
event_pipeline = { path = "./event_pipeline" }


async-trait = "0.1.86"
once_cell = "1.20.3"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.138"
serde = {version =  "1.0.217", features = ["derive"]}
chrono = {version =  "0.4.39", features = ["serde"]}
