[package]
name = "event_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
once_cell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio_event_bus.workspace = true
# serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
# uuidv7 = "0.1"
# for uuidv7
coarsetime = "0.1"
getrandom = { version = "0.3", optional = false }
# log = "0.4.25"

tokio-stream = "0.1"
test-log = {version =  "0.2.17", features = ["trace"]}
