[package]
name = "event_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
once_cell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio_event_bus.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
coarsetime = "0.1"
getrandom = { version = "0.3", optional = false }

tokio-stream = "0.1"
test-log = {version =  "0.2.17", features = ["trace"]}

# Dependencies for examples
axum = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }

[features]
default = []
examples = ["axum", "futures", "async-stream"]

[[example]]
name = "pipeline"
required-features = ["examples"]